# hemu

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.toml  format.gtkw  hemu.dtb  hemu.dts  rustfmt.toml
.github/workflows/: test.yml
dependencies/devicetree/: hemu.dts
dependencies/rtl/: PuaCpu.v  top.v  top_sram_wrapper.v
dependencies/tests/: Makefile
dependencies/xv6/: fs.img  kernel
doc/: architecture.drawio  plantuml.md
resources/am-tests/: add-longlong-riscv64-nemu.diff  add-riscv64-nemu.txt  bubble-sort-riscv64-nemu.elf  crc32-riscv64-nemu.diff  fact-riscv64-nemu.diff  goldbach-riscv64-nemu.txt  hello-str-riscv64-nemu.diff  hello-str-riscv64-nemu.txt  load-store-riscv64-nemu.elf  matrix-mul-riscv64-nemu.diff  matrix-mul-riscv64-nemu.elf  max-riscv64-nemu.diff  mersenne-riscv64-nemu.diff  movsx-riscv64-nemu.elf  movsx-riscv64-nemu.txt  mul-longlong-riscv64-nemu.diff  (+7 more)
script/: build.rs  config.toml
src/: bus.rs  constants.rs  cpu.rs  csr.rs  debug.rs  dram.rs  dut.rs  emulator.rs  engine.rs  exception.rs  instructions.rs  interrupt.rs  lib.rs  log.rs  main.rs  memory.rs  monitor.rs  rom.rs  tui.rs
system-tests/: Cargo.toml
tests/: Makefile  add-longlong.rs  add.rs  all.rs  am-tests.rs  bit.rs  bubble-sort.rs  div.rs  dummy.rs  fact.rs  fib.rs  goldbach.rs  hello-str.rs  if-else.rs  leap-year.rs  load-store.rs  matrix-mul.rs  max.rs  min3.rs  mov-c.rs  movsx.rs  mul-longlong.rs  pascal.rs  prime.rs  quick-sort.rs  recursion.rs  riscv-tests-p.rs  riscv-tests-rv64mi.rs  riscv-tests-rv64si.rs  riscv-tests-rv64ua.rs  riscv-tests-rv64ud.rs  riscv-tests-rv64ui.rs  riscv-tests-rv64um.rs  riscv-tests-v.rs  riscv-tests.rs  select-sort.rs  shift.rs  shuixianhua.rs  string.rs  sub-longlong.rs  (+5 more)
(+829 files in other folders)
