[package]
name = "hemu"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
verilated = { git = "https://github.com/Anillc/verilated-rs.git", branch = "fix" }
verilated-module = { git = "https://github.com/Anillc/verilated-rs.git", branch = "fix" }
clap = { version = "4.3.11", features = ["derive"] }
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.27.0"
ratatui = "0.26.2"
strum = "0.26.2"

[build-dependencies]
verilator = { git = "https://github.com/Anillc/verilated-rs.git", branch = "fix", features = ["gen", "module"] }
